--- a/ds1m-b/paula-blesa/css/raças.css
+++ b/ds1m-b/paula-blesa/css/raças.css
@@ -1,15 +1,11 @@
-.raça{
-
-width: 313px;
-height: 96px;
-left: 523px;
-top: 27px;
-
-font-family: 'Piedra';
-font-style: normal;
-font-weight: 400;
-font-size: 100px;
-line-height: 130px;
-background-color: aquamarine;
-color: #000000;
+.raça {
+    position: absolute;
+    left: 523px;
+    top: 1999px;
+    font-family: 'Piedra';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 7rem;
+    line-height: 399px;
+    color: #000000;
 }
