--- a/ds1m-a/cleiton/css/home.css
+++ b/ds1m-a/cleiton/css/home.css
@@ -4,6 +4,8 @@
     background-image: url(../img/back.webp);
     background-repeat: no-repeat;
     background-size: cover;
+    box-shadow: inset 0px -30px 40px #000000;
+    filter: grayscale(10%);
 }
 
 .suspenso1,
