sessões home, sobre e fundadores concluída

--- a/ds1m-b/one-page-leticia/css/menu.css
+++ b/ds1m-b/one-page-leticia/css/menu.css
@@ -3,9 +3,7 @@
     gap: 55px;
     font-size: 1.25rem;
     margin-top: 80px; 
-    /* margin-right: 35px;  */
-    /* margin-left: 100px; */
-    padding-left: 100px;
+    margin-right: 35px; 
 }
 
 .menu li{
