--- a/ds1m-b/paula-blesa/css/home.css
+++ b/ds1m-b/paula-blesa/css/home.css
@@ -1,28 +1,24 @@
-.home{
-
+.home {
     display: flex;
     background-image: url(../img/gatosqnsom.png);
     background-size: cover;
     width: 100%;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
 }
 
-.cats{
+.cats {
     display: flex;
-    
 }
-.title{
-    position: absolute;
+
+.title {
     width: 882px;
-    left: 400px;
-    top: 350px;
-
     font-family: 'Updock', cursive;
-    font-style: normal;
     font-weight: 400;
-    font-size: 40rem;
+    font-size: 20rem;
     line-height: 30px;
-
     color: white;
-    -webkit-text-stroke-width: 7px;
+    -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: black;
 }
