--- a/ds1m-b/paula-blesa/css/sobre.css
+++ b/ds1m-b/paula-blesa/css/sobre.css
@@ -1,107 +1,38 @@
+.sobre-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 26px;
+}
+
 .title-sobre {
     display: flex;
-    font-size: 7rem;
+    font-size: 8rem;
     font-family: 'Piedra', cursive;
-    position: absolute;
-    left: 670px;
-    top: 0px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 2150px;
-    ;
+    justify-content: center;
 }
 
 .border {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    left: 0px;
+    display: grid;
     border: 20px solid #F8E795;
-    height: 0px;
-    top: 1120px;
-    transform: rotate(-0.24deg);
-}
-
-.icon-bola {
-    position: absolute;
-    height: 106px;
-    left: 1000px;
-    top: 1010px;
-    background: url(../img/bola.png);
 }
 
 .description-title {
-    position: absolute;
-    width: 522px;
-    left: 200px;
-    top: 1200px;
+    margin-top: 40px;
+    display: grid;
+    margin-left: 240px;
+    width: 500px;
     font-family: 'Patrick Hand', cursive;
-    font-size: 1.80rem;
+    font-size: 1.70rem;
     color: #000000;
 }
 
 .description-text {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1540px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
-    color: #000000;
-}
-
-.description-text1 {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1580px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
-    color: #000000;
-}
-
-.description-text2 {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1620px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
-    color: #000000;
-}
-
-.description-text3 {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1660px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
-    color: #000000;
-}
-
-.description-text4 {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1700px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
-    color: #000000;
-}
-
-.description-text5 {
-    position: absolute;
-    width: 667px;
-    height: 432px;
-    left: 1200px;
-    top: 1740px;
-    font-family: 'Patrick Hand';
-    font-size: 1.80rem;
+    display: grid;
+    width: 500px;
+    margin-left: 190px;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 1.70rem;
     color: #000000;
 }
