--- a/ds1t-b/one-page-nike/css/black-friday.css
+++ b/ds1t-b/one-page-nike/css/black-friday.css
@@ -3,26 +3,76 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 64px;
+    gap: 25px;
+    align-items: center;
 }
 
 .faixa {
-    background-color: var(--primary-color);
     height: 10vh;
-    width: 130vh;
-    transform: rotate(-23deg);
+    width: 60%;
     font-size: 4rem;
-    color: #000;
-    z-index: -1;
+    align-items: center;
 }
 
-.card-container {
+.black-friday .logo {
+    align-items: center;
+}
+
+.title {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #FF0000;
+    font-size: 1em; color: #000000;
+    align-items: center;
+}
+
+.img-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 48px;
+    gap: 38px;
 }
-.card {
+.img {
     position: relative;
     overflow: hidden;
+}
+
+.images {
+    border: 2px solid #FF0000;
+}
+
+.description {
+    width: 150px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.description-old-price {
+    width: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #ffffff;
+    color: #000;
+    text-decoration: line-through;
+}
+
+.description-discount {
+    color: #14FF00;
+}
+
+.img::before {
+    content: "Clique aqui para abrir o produto";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #0009;
+    display: grid;
+    place-content: center;
+    font-weight: 700;
+    transform: translateY(100%);
+    transition: transform .7s;
+}
+.img:hover::before {
+    transform: translateY(0%);
 }
