--- a/ds1t-a/Luiz Gustavo/css/style.css
+++ b/ds1t-a/Luiz Gustavo/css/style.css
@@ -1,13 +1,20 @@
-header{
+header {
     width: 100%;
-    height: 154px;
+    height: 13vh;
     background-color: #222020;
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
 
-body{
+body {
     font-family: 'Poppins';
+}
+
+.section-iphone,
+.section-ipad,
+.section-mac,
+.section-airpods-watch,
+.section-contato {
+    height: 100vh;
 }
