--- a/ds1t-a/biancaLeao/Arquitetura/css/home.css
+++ b/ds1t-a/biancaLeao/Arquitetura/css/home.css
@@ -15,28 +15,35 @@
     padding-top: 10vh;
     gap: 3vh;
     height: auto;
+   
+    
+    
 }
 .sobre-text{
     display: grid;
     font-family: 'Montserrat', sans-serif;
     color: #ffff;
-    max-width: 37%;
+    max-width: 28%;
     height: auto;
     background-color: var(--prime-color-dark);
 }
 .person_photo{
-    max-width: 38%;
+    max-width: 30%;
+    height: 90vh;
 }
 .sobre-text p{
     place-self: center;
+    max-width: 70%;
+    font-size: 1.3rem;
     height: auto;
-    max-width: 90%;
-    font-size: 2.2rem;
    
 }
 @media (max-width: 1640px){
     #home{
         padding-top: 20vh;
+    }
+    .person_photo{
+        height: auto;
     }
     .sobre-text p{
 
