--- a/ds1t-b/yasmin/css/destinos.css
+++ b/ds1t-b/yasmin/css/destinos.css
@@ -1,5 +1,21 @@
+.destinos__text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 65px;
+}
 .destinos__title{
     font-size: 4rem;
     display: flex;
     justify-content: center;
+}
+.destinos__description{
+    display: flex;  
+    max-width: 1160px;
+    width: 100%;
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-align: center;
+    justify-self: center;
+    
 }
