--- a/ds1t-b/projeto-hamburguer/css/home.css
+++ b/ds1t-b/projeto-hamburguer/css/home.css
@@ -1,8 +1,6 @@
 .home{
+    height: calc(100vh - 100px);
     width: 100%;
-    background-image: url(../img/background.png);
-    background-repeat: no-repeat;
-    background-size: cover;
     display: grid;
     grid-template-areas: 
     "photo photo"
@@ -11,10 +9,79 @@
     grid-template-columns: 1fr 1fr;
     color: #fff;
 }
-.home__photo{
-    place-self: center;
+.slider{
     grid-area: photo;
-    padding-top: 136px;
+    width: 1344px;
+    margin: 0 auto;
+    overflow: hidden;
+    place-self: center;
+}
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+.slides input{
+    display: none;
+}
+.slide{
+    width: 25%;
+    position: relative;
+    transition: 2s;
+}
+.manual-navigation{
+    position: absolute;
+    width: 1344px;
+    display: flex;
+    justify-content: center;
+}
+.manual-btn{
+    border: 2px solid #fff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.manual-btn:not(:last-child){
+    margin-right: 20px;
+}
+.manual-btn:hover{
+    background-color: #fff;
+}
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
+#radio3:checked ~ .first{
+    margin-left: -50%;
+}
+.navigation-auto div{
+    border: 2px solid #20a6ff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.navigation-auto{
+    position: absolute;
+    width: 1344px;
+    margin-top: 400px;
+    display: flex;
+    justify-content: center;
+}
+.navigation-auto div:not(:last-child){
+    margin-right: 20px;
+}
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    background-color: #fff;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    background-color: #fff;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3{
+    background-color: #fff;
 }
 .container__text{
     grid-area: text;
