--- a/ds1t-b/André Luiz/css/style.css
+++ b/ds1t-b/André Luiz/css/style.css
@@ -1,11 +1,11 @@
 body{
     background-color: #000000;
-    font-family:   'montserrat';
+    font-family: 'Montserrat';
 }
 
 header{
     max-width: 1770px;
-    height: 12.3rem;
+    height: 15vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
