--- a/ds1t-b/one-page-nike/css/black-friday.css
+++ b/ds1t-b/one-page-nike/css/black-friday.css
@@ -46,12 +46,13 @@
     justify-content: space-between;
     gap: 30px;
 }
+
 .img {
     position: relative;
     overflow: hidden;
 }
 
-.images {
+.black-friday .images {
     border: 2px solid #FF0000;
 }
 
@@ -76,7 +77,7 @@
     color: #14FF00;
 }
 
-.img::before {
+.black-friday .img::before {
     content: "Clique aqui para abrir o produto";
     position: absolute;
     width: 100%;
@@ -89,7 +90,7 @@
     transition: transform .7s;
 }
 
-.img:hover::before {
+.black-friday .img:hover::before {
     transform: translateY(0%);
 }
 
