--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -64,6 +64,7 @@
     justify-content: center;
     text-align: center;
     width: 37.8vw;
+    font-size: 2rem;
     grid-column: 2;
     color: #ffffff;
 }
