--- a/ds1t-b/André Luiz/css/tab.css
+++ b/ds1t-b/André Luiz/css/tab.css
@@ -20,5 +20,49 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 64px;
+    font-size: 4rem;
+}
+
+.tab-text-container{
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 8px;
+}
+
+.tab-text{
+    color: #fff;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 3rem;
+}
+
+.tab-promotion-container{
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.tab-promotion-container a{
+    font-family: 'Ubuntu';
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 23vw;
+    height: 12vh;
+    font-size: 1.5rem;
+    background: #ffff;
+    border-radius: 30px;
+    color: #000;
 }
