Correção de errors

--- a/ds1t-b/André Luiz/css/menu.css
+++ b/ds1t-b/André Luiz/css/menu.css
@@ -9,6 +9,6 @@ a{
     font-family: 'Montserrat';
     font-weight: 700;
     font-style: bold;
-    font-size: 16px;
+    font-size: 1.5rem;
     gap: 35px;
 }
