--- a/ds1t-a/marceloGabriel-riotGames/css/style.css
+++ b/ds1t-a/marceloGabriel-riotGames/css/style.css
@@ -4,3 +4,15 @@
     flex-direction: row;
     justify-content: center;
 }
+
+Main {
+    height: 100vh;
+}
+
+.lista-cabecalho-home {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    
+}
