--- a/ds1t-a/marceloGabriel-riotGames/css/style.css
+++ b/ds1t-a/marceloGabriel-riotGames/css/style.css
@@ -1,8 +1,16 @@
+Header {
+    position: relative;
+    display: grid;
+    padding: 10px;
+    place-items: center;
+}
+
 .cabecalho-home-um {
     display: flex;
     align-items: center;
-    flex-direction: row;
     justify-content: center;
+    position: fixed;
+
 }
 
 Main {
@@ -14,5 +22,6 @@ Main {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+   
     
 }
