--- a/ds1m-b/paula-blesa/css/image.css
+++ b/ds1m-b/paula-blesa/css/image.css
@@ -26,3 +26,17 @@
     margin-top: 40px;
     margin-left: 90px;
 }
+
+.img-raças {
+    display: flex;
+    margin-left: 300px;
+    margin-top: 30px;
+    gap: 120px;
+}
+
+.img-raça {
+    display: flex;
+    margin-left: 300px;
+    margin-top: 40px;
+    gap: 120px;
+}
