--- a/ds1m-b/lucasvinicius/css/style.css
+++ b/ds1m-b/lucasvinicius/css/style.css
@@ -4,16 +4,19 @@ body{
     grid-template-areas:
         "content"
         "footer";
-    font-family: 'Montserrat', sans-serif;;
-    
+    font-family: 'Montserrat', sans-serif;
+    color:white;
 }
 
 
 header{
     grid-area: content;
     height: 10vh;
-    z-index: 1;
+    z-index: 2;
     display: flex;
+    margin-top: 4rem;
+    place-content: center;
+    justify-content: space-around;
 }
 
 
@@ -26,6 +29,7 @@ section{
     height: 100vh;
     width: 100%;
 }
+
 #home{
     background-color: green;
 }
