--- a/ds1m-a/cleiton/css/style.css
+++ b/ds1m-a/cleiton/css/style.css
@@ -2,6 +2,10 @@
     --primary-color: #0F4E98;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Berserk';
     color: #ffffff;
@@ -20,7 +24,27 @@ header {
 
 .menu {
     display: flex;
+    height: 100%;
+    justify-content: center;
     gap: 35px;
+}
+
+.menu li {
+    border-bottom: 4px solid transparent;
+    transition: border-color .5s;
+}
+
+.omega {
+    visibility: hidden;
+}
+
+.omega li:hover {
+    visibility: visible;
+}
+
+.menu li:hover {
+    visibility: visible;
+    border-color: var(--primary-color);
 }
 
 .logo {
