--- a/ds1m-a/cleiton/css/home.css
+++ b/ds1m-a/cleiton/css/home.css
@@ -15,23 +15,55 @@
     height: 180px;
     width: 360px;
     color: #ffffff;
-    background-color: #0009;
     font-family: 'Berserk';
     font-size: 32px;
 }
 
 .suspenso1 {
-    top: 30%;
+    top: 20%;
     left: 15%;
+    animation-duration: 3s;
+    animation-name: animacao1;
 }
 
 .suspenso2 {
-    top: 80%;
+    top: 55%;
     left: 5%;
     height: 150px;
+    animation-duration: 4s;
+    animation-name: animacao2;
 }
 
 .suspenso3 {
     top: 60%;
-    right: 10%;
+    right: 8%;
+    animation-duration: 6s;
+    animation-name: animacao3;
+}
+
+@keyframes animacao1 {
+    from {
+        transform: translatey(-200%)
+    }
+    to {
+        transform: translatey(0%);
+    }
+}
+
+@keyframes animacao2 {
+    from {
+        transform: translateX(-150%)
+    }
+    to {
+        transform: translateX(0%);
+    }
+}
+
+@keyframes animacao3 {
+    from {
+        transform: translateX(150%)
+    }
+    to {
+        transform: translateX(0%);
+    }
 }
