--- a/ds1m-b/paula-blesa/css/image.css
+++ b/ds1m-b/paula-blesa/css/image.css
@@ -40,3 +40,10 @@
     margin-top: 40px;
     gap: 120px;
 }
+
+.redondo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+}
