--- a/ds1m-b/paula-blesa/css/curiosidades.css
+++ b/ds1m-b/paula-blesa/css/curiosidades.css
@@ -18,3 +18,47 @@
     display: flex;
     margin-top: 3px;
 }
+
+.curiosidade-text {
+    display: flex;
+    flex-direction: row;
+    gap: 400px;
+}
+
+.text6 {
+    display: flex;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+    margin-left: 240px;
+    max-width: 400px;
+    margin-top: 30px;
+}
+
+.text7 {
+    display: flex;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+    margin-left: 240px;
+    max-width: 400px;
+    margin-top: 30px;
+}
+
+.text8 {
+    display: flex;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+    margin-left: 240px;
+    max-width: 400px;
+    margin-top: 30px;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.text9 {
+    display: flex;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+    margin-left: 240px;
+    max-width: 400px;
+    margin-top: 30px;
+}
