--- a/ds1m-b/paula-blesa/css/style.css
+++ b/ds1m-b/paula-blesa/css/style.css
@@ -36,8 +36,28 @@ section {
 }
 
 footer {
-    height: 150px;
+    place-self: end center;
+    height: 100px;
     width: 100%;
     display: grid;
+    place-content: center;
+    border-top: 2px solid #000;
     background-color: #F8E795;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 2rem;
+}
+
+.voltar {
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    display: grid;
+    place-content: center;
+    font-size: 5rem;
+    transition: all .5s;
+    color: black;
+}
+
+.voltar:hover {
+    color: #D2AC47;
 }
