--- a/ds1t-a/Luiz Gustavo/css/airpods.css
+++ b/ds1t-a/Luiz Gustavo/css/airpods.css
@@ -2,15 +2,33 @@
     background: linear-gradient(90deg, #1B1048 0%, #560762 100%);
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-template-rows: 20vh 85vh;
+}
+
+.div-title{
+    height: 25vh;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: 700;
+    font-size: 4rem;
+    grid-column: 1;
 }
 
 .airpods{
-    height: 100vh;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 1;
+    gap: 40px;
 }
 
 .main-airpods{
     display: grid;
-    place-items: center;
 }
 
 .text-button-airpods {
@@ -25,7 +43,7 @@
 .text-airpods{
     color: white;
     width: 700px;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     font-weight: 600;
     text-align: justify;
 }
@@ -35,3 +53,4 @@
     align-items: center;
     gap: 15px;
 }
+
