--- a/ds1t-b/Projeto FF/footer.css
+++ b/ds1t-b/Projeto FF/footer.css
@@ -1,16 +1,15 @@
 footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    place-self: end start;
+    grid-area: content;
     height: 70px;
-    top: 823px;
-    left: 0px;
+    width: 100%;
+    display: grid;
+    place-content: center;
     background: #000000;
-    border: 3px solid #FFFFFF;
+    font-size: .74rem;
+    border-top: 3px solid #fff;
     font-family: 'Ubuntu';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    color: #FFFFFF;
+    font-style: normal; font-weight: 400; font-size: 30px; color: #FFFFFF;
 }
+ 
 
