--- a/ds1t-a/juliaSoares/css/historia.css
+++ b/ds1t-a/juliaSoares/css/historia.css
@@ -7,7 +7,7 @@
 
 .store-starbucks {
     grid-area: imagem;
-    height: 800px;
+    height: 700px;
     align-self: center;
     margin-left: 200px;
     margin-top: 100px;
@@ -50,8 +50,25 @@
     padding-left: 60px;
     padding-top: 20px;
     font-size: 2rem;
+    margin-top: 550px;
+    margin-left: 250px;
 }
 
 .button_text {
+    grid-area: texto;
     align-self: center;
+}
+
+.livro-img {
+    grid-area: texto;
+    height: 40px;
+    margin-top: 650px;
+    margin-left: 300px;
+}
+
+.texto-leitura {
+    grid-area: texto;
+    font-size: 1.5rem;
+    margin-top: 660px;
+    margin-left: 350px;
 }
