--- a/ds1t-b/claudioSousa/CSS/cardapio.css
+++ b/ds1t-b/claudioSousa/CSS/cardapio.css
@@ -3,10 +3,11 @@
     width: 100%;
     display: grid;
     grid-template-columns: 3fr 3fr 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto 1fr 1fr;
     grid-template-areas: 
     "title title foto"
     "ttext ttext foto"
+    "ttext2 ttext2 foto"
     ;
 }
 
@@ -17,6 +18,8 @@
 
 .card-text{
     grid-area: ttext;
+    margin-left: 15rem;
+    font-family: 'Lalezar', cursive;
 }
 
 .card-foto{
@@ -26,4 +29,31 @@
     background-size: cover;
 
 }
+
+.porcoes{
+    display: flex;
+    font-size: 2rem;
+    align-items: center;
+    gap: 30px;
+}
+
+.title-2{
+    font-size: 2.5rem;
+    padding-bottom: 30px;
+}
+
+.card-text2{
+    grid-area: ttext2;
+    margin-left: 15rem;
+    font-family: 'Lalezar', cursive;
+}
+
+.bebidas{
+    display: flex;
+    font-size: 2rem;
+    align-items: center;
+    gap: 30px;
+
+}
+
 
